--- a/index.html
+++ b/index.html
@@ -4,21 +4,52 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Página inicial</title>
+	<style>
+		body {
+			background-color: darkcyan;
+		}
+		div {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			flex-direction: column;
+			margin: 0 auto;
+			border: 3px solid black;
+			border-radius: 10px;
+			width: 350px;
+			box-shadow: 25px 25px;
+			margin-top: 40px;
+			background-color: lightcyan;
+			text-align: center;
+		};
+
+		p {
+			margin-right: 20px;
+			margin-left: 20px;
+			color: darkcyan;
+		}
+
+		button {
+			margin-top: 15px;
+			margin-bottom: 15px;
+		}
+	</style>
 </head>
 <body>
-	<h3>Bem vindo aos meus projetos</h3>
-	<button> <a href="exemplo 1.html">aula 01 </a> </button>
-	<button> <a href="exemplo 2.html">aula 02 </a> </button>
-	<button> <a href="exemplo 3.html">aula 03 </a> </button>
-	<button> <a href="exemplo 4.html">aula 04 </a> </button>
-	<button> <a href="Exemplo5.html">aula 05 </a> </button>
-	<button> <a href="Exemplo6.html">aula 06 </a> </button>
-	<button> <a href="Exemplo7.html">aula 07 </a> </button>
-	<button> <a href="img/The BATMAN.png">aula 08 </a> </button>
+	<div>
+		<h3>Bem vindo aos meus projetos</h3>
+    	<p>Meus primeiros projetos com HTML feitos durante o curso de lógica de programação no Senac</p>
+    </div>
 
-
+    <div>
+		<button> <a href="exemplo1.html">aula 01 </a> </button>
+		<button> <a href="exemplo2.html">aula 02 </a> </button>
+		<button> <a href="exemplo3.html">aula 03 </a> </button>
+		<button> <a href="exemplo4.html">aula 04 </a> </button>
+		<button> <a href="exemplo5.html">aula 05 </a> </button>
+		<button> <a href="exemplo6.html">aula 06 </a> </button>
+		<button> <a href="exemplo7.html">aula 07 </a> </button>
+		<button> <a href="img/The BATMAN.png">aula 08 </a> </button>
+	</div>
 </body>
-
 </html>
-
-
