--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 		<button> <a href="exemplo2.html">aula 02 </a> </button>
 		<button> <a href="exemplo3.html">aula 03 </a> </button>
 		<button> <a href="exemplo4.html">aula 04 </a> </button>
-		<button> <a href="exemplo5.html">aula 05 </a> </button>
-		<button> <a href="exemplo6.html">aula 06 </a> </button>
-		<button> <a href="exemplo7.html">aula 07 </a> </button>
+		<button> <a href="Exemplo5.html">aula 05 </a> </button>
+		<button> <a href="Exemplo6.html">aula 06 </a> </button>
+		<button> <a href="Exemplo7.html">aula 07 </a> </button>
 		<button> <a href="img/The BATMAN.png">aula 08 </a> </button>
 	</div>
 </body>
