--- a/index.html
+++ b/index.html
@@ -42,14 +42,18 @@
     </div>
 
     <div>
-		<button> <a href="exemplo1.html">aula 01 </a> </button>
-		<button> <a href="exemplo2.html">aula 02 </a> </button>
-		<button> <a href="exemplo3.html">aula 03 </a> </button>
-		<button> <a href="exemplo4.html">aula 04 </a> </button>
+		<button> <a href="exemplo 1.html">aula 01 </a> </button>
+		<button> <a href="exemplo 2.html">aula 02 </a> </button>
+		<button> <a href="exemplo 3.html">aula 03 </a> </button>
+		<button> <a href="exemplo 4.html">aula 04 </a> </button>
 		<button> <a href="Exemplo5.html">aula 05 </a> </button>
 		<button> <a href="Exemplo6.html">aula 06 </a> </button>
 		<button> <a href="Exemplo7.html">aula 07 </a> </button>
+		<button> <a href="exercicio1.html">Exercicio 1</a> </button>
+		<button> <a href="exercicio2.html">Exercicio 2</a> </button>
+		<button> <a href="Exercicio3.html">Exercicio 3</a> </button>
 		<button> <a href="img/The BATMAN.png">aula 08 </a> </button>
 	</div>
 </body>
 </html>
+
